# cmakeLibExample

./: CMakeLists.txt
subDir/: CMakeLists.txt  IncludeExample.cxx  IncludeExample.h
